--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,11 @@ android {
 }
 
 dependencies {
-    compile 'com.github.barteksc:android-pdf-viewer:2.8.2'
-    compile "commons-io:commons-io:+"
+    implementation "commons-io:commons-io:+"
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.2.1'
+    //implementation 'com.google.android.material:material:1.3.0-alpha04'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
