--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation "commons-io:commons-io:+"
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation "androidx.activity:activity:1.3.1"
+    implementation "androidx.fragment:fragment:1.3.0"
     implementation 'com.google.android.material:material:1.2.1'
     //implementation 'com.google.android.material:material:1.3.0-alpha04'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
